# M2_coursework

./: README.md  baseline.ipynb  flops.ipynb  hyperparam_search.ipynb  lora.ipynb  param_search.ipynb  pyproject.toml  test.ipynb
lora/: lora_skeleton.py
src/: preprocessor.py
